# shiny-rs-faceapp

./: Cargo.toml  README.md
face/: Cargo.toml
face/src/: lib.rs
src/: main.rs
static/: index.R  index.html
static/css/: main.css
