[package]
name = "shinyFaceApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#shiny-rs = { git="https://github.com/andyquinterom/shiny-rs", branch="master" }
shiny-rs = { path = "../shiny-rs" }
actix = "0.13"
actix-files = "0.6"
actix-web-actors = "4.1"
actix-web = "4.1"
tokio = "1.20"
face = { path = "./face" }
